# cryptomkt-rs

./: .gitignore  Cargo.toml  README.md
examples/: simple.rs
src/: api.rs  client.rs  lib.rs  market.rs
src/internal/: api.rs  errors.rs  mod.rs  models.rs  request.rs  response.rs
tests/: api_integration_test.rs
